orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Connected_CRM__c/Connected_CRM__c.object-meta.xml
<CustomObject>
    <description>Connected CRM instances managed by BlackRoad OS Hub</description>
    <label>Connected CRM</label>
    <nameField>
        <label>CRM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connected CRMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>