orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Connected_CRM__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <label>API Endpoint</label>
    <type>Url</type>
</CustomField>