orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Connected_CRM__c/fields/CRM_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Type__c</fullName>
    <label>CRM Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Salesforce FSC</fullName><default>false</default><label>Salesforce FSC</label></value>
            <value><fullName>SuiteCRM</fullName><default>false</default><label>SuiteCRM</label></value>
            <value><fullName>EspoCRM</fullName><default>false</default><label>EspoCRM</label></value>
            <value><fullName>HubSpot</fullName><default>false</default><label>HubSpot</label></value>
            <value><fullName>Pipedrive</fullName><default>false</default><label>Pipedrive</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>