orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Connected_CRM__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <label>Record Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>